tests/compile_fail/round_on_l_conn.stderr
error[E0277]: the trait bound `Conn<i32, i32>: ConnR` is not satisfied
  --> tests/compile_fail/round_on_l_conn.rs:11:24
   |
11 |     let _: i32 = round(&L_CONN, 0_i32);
   |                  ----- ^^^^^^^ the trait `ConnR` is not implemented for `Conn<i32, i32>`
   |                  |
   |                  required by a bound introduced by this call
   |
   = help: the trait `ConnR` is implemented for `Conn<A, B, R>`
note: required by a bound in `connections::conn::round`
  --> src/conn.rs
   |
   | pub fn round<T, A, B>(t: &T, x: A) -> B
   |        ----- required by a bound in this function
   | where
   |     T: ?Sized + ConnL<A = A, B = B> + ConnR<A = A, B = B>,
   |                                       ^^^^^^^^^^^^^^^^^^^ required by this bound in `round`
